# incident-response-agent-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  incident_platform.db  pyproject.toml
backend/: db.py  main.py
backend/agents/: analysis_agent.py  postmortem_agent.py  research_agent.py  response_agent.py
backend/api/: incident_routes.py
backend/core/: config.py
backend/graph/: state.py  workflow.py
backend/models/: investigation.py
backend/observability/: langfuse.py
backend/repositories/: investigation_repository.py
backend/schemas/: analysis.py  api.py  incident.py  postmortem.py  research.py  response.py
backend/services/: llm.py
backend/tests/: test_incident_api.py  test_research_agent.py
backend/tests/evals/: test_incident_quality.py
backend/tools/: mcp_client.py  test_mcp_connection.py
docs/: ARCHITECTURE_DEEP_DIVE.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: incidentApi.ts
frontend/src/pages/: Dashboard.tsx
