[project]
name = "incident-response-agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
